# oliorepo

./: .gitignore  README.md
teht1/: main.cpp
teht2/: game.cpp  game.h  main.cpp
teht3/: main.cpp
teht4/: CMakeLists.txt  asiakas.cpp  asiakas.h  luottotili.cpp  luottotili.h  main.cpp  pankkitili.cpp  pankkitili.h
teht5/: CMakeLists.txt  main.cpp  notifikaattori.cpp  notifikaattori.h  seuraaja.cpp  seuraaja.h
teht6/: main.cpp  student.cpp  student.h
teht7_1/: mainwindow.cpp  mainwindow.h  mainwindow.ui
teht7_2/: mainwindow.cpp  mainwindow.h  mainwindow.ui
teht8/: mainwindow.cpp  mainwindow.h  mainwindow.ui
